--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,7 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
-      run: pip install -r requirements.txt -r requirements_test.txt
+      run: pip install -e .[test]
     - name: Lint with flake8
       run: flake8 . --count --statistics
     - name: Lint with mypy
