--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,28 +7,26 @@ on:
   pull_request:
     branches:
       - main
-
-permissions:
-  contents: read
-
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     strategy:
       matrix:
         python-version: ["3.9", "3.10", "3.11", "3.12"]
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-python@v5
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: pip install -e .[test]
-    - name: Lint with flake8
-      run: flake8 . --count --statistics
-    - name: Lint with mypy
-      run: mypy .
-    - name: Test
-      run: coverage run -m unittest -v
-    - name: Verify coverage
-      run: coverage report --fail-under=95
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: pip install -e ".[test]"
+      - name: Lint with flake8
+        run: flake8 . --count --statistics
+      - name: Lint with mypy
+        run: mypy .
+      - name: Test
+        run: coverage run -m unittest -v
+      - name: Verify coverage
+        run: coverage report --fail-under=95
