Add ruff and fix all warnings

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,38 +7,49 @@ name = "mobilus-client"
 dynamic = ["version"]
 description = "Python client for Mobilus Cosmo GTW"
 readme = "README.md"
-license = { file = "LICENSE" }
-authors = [{ name = "Zbigniew Pieślak", email = "zpieslak@gmail.com" }]
+license = {file = "LICENSE"}
+authors = [{name = "Zbigniew Pieślak", email = "zpieslak@gmail.com"}]
 dependencies = [
-    "paho-mqtt~=1.6.0",
-    "cryptography~=43.0",
-    "protobuf==5.28.1",
+  "paho-mqtt~=1.6.0",
+  "cryptography~=43.0",
+  "protobuf==5.28.1"
 ]
 requires-python = ">=3.9"
 
 [project.optional-dependencies]
 test = [
-    "coverage~=7.0",
-    "factory-boy~=2.0",
-    "flake8~=7.0",
-    "mypy~=1.0",
-    "mypy-protobuf~=3.0",
-    "types-paho-mqtt~=1.0",
-    "types-protobuf~=5.28.0",
+  "coverage~=7.0",
+  "factory-boy~=2.0",
+  "mypy~=1.0",
+  "mypy-protobuf~=3.0",
+  "ruff~=0.6.0",
+  "types-paho-mqtt~=1.0",
+  "types-protobuf~=5.28.0"
 ]
 
 [project.urls]
 homepage = "https://github.com/zpieslak/mobilus-client"
 issues = "https://github.com/zpieslak/mobilus-client/issues"
 
-[tool.hatch.version]
-source = "vcs"
+[tool.coverage.report]
+exclude_also = [
+  "if TYPE_CHECKING:"
+]
+
+[tool.coverage.run]
+omit = [
+  "*/proto/*",
+  "tests/*"
+]
 
 [tool.hatch.build]
 exclude = [
-    ".*",
-    "tests/*",
+  ".*",
+  "tests/*"
 ]
+
+[tool.hatch.version]
+source = "vcs"
 
 [tool.mypy]
 strict = true
@@ -47,13 +58,13 @@ strict = true
 module = "factory"
 ignore_missing_imports = true
 
-[tool.coverage.run]
-omit = [
-    "*/proto/*",
-    "tests/*",
-]
+[tool.ruff]
+exclude = ["*/proto/*"]
+line-length = 120
 
-[tool.coverage.report]
-exclude_lines = [
-    "@abstractmethod",
-]
+[tool.ruff.lint]
+ignore = ["D", "PT", "TRY400"]
+select = ["ALL"]
+
+[tool.ruff.lint.per-file-ignores]
+"tests/*" = ["S106"]
