--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,8 +22,8 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: pip install -e ".[test]"
-      - name: Lint with flake8
-        run: flake8 . --count --statistics
+      - name: Lint with ruff
+        run: ruff check --output-format=github .
       - name: Lint with mypy
         run: mypy .
       - name: Test
