--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,10 +24,10 @@ classifiers = [
 [project.optional-dependencies]
 test = [
   "coverage>=7.0",
-  "factory-boy>=3.0",
+  "factory-boy==3.3.1",
   "mypy>=1.0",
   "mypy-protobuf>=3.0",
-  "ruff>=0.6.0",
+  "ruff>=0.9.0",
   "types-protobuf>=3.20"
 ]
 
